[change] mdx에서 IconWrapper 컴포넌트 활용하도록 구조 변경

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -66,141 +66,141 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Small</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper name="IconCheckSmallLine"></IconWrapper>
-                            <IconWrapper name="IconPlusSmallLine" color="black"></IconWrapper>
-                            <IconWrapper name="IconArrowSmallLine"></IconWrapper>
-                            <IconWrapper name="IconThreeDotSmallFill"></IconWrapper>
-                            <IconWrapper name="IconTextArrowSmallFill"></IconWrapper>
-                            <IconWrapper name="IconOfficialSmallFill"></IconWrapper>
-                            <IconWrapper name="IconExclamationSmallFill"></IconWrapper>
-                            <IconWrapper name="IconProfileSmallFill"></IconWrapper>
-                            <IconWrapper name="IconCheckSmallFill"></IconWrapper>
-                            <IconWrapper name="IconCloseSmallLine"></IconWrapper>
-                            <IconWrapper name="IconSettingSmallFill"></IconWrapper>
-                            <IconWrapper name="IconQuestionMarkSmallFill"></IconWrapper>
-                            <IconWrapper name="IconFileSmallLine"></IconWrapper>
-                            <IconWrapper name="IconStarSmallFill" color="gray400"></IconWrapper>
-                            <IconWrapper name="IconMegaphoneSmallLine"></IconWrapper>
-                            <IconWrapper name="IconLinkSmallLine"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconCheckSmallLine"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconPlusSmallLine" color="black"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconArrowSmallLine"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconThreeDotSmallFill"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconTextArrowSmallFill"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconOfficialSmallFill"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconExclamationSmallFill"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconProfileSmallFill"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconCheckSmallFill"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconCloseSmallLine"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconSettingSmallFill"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconQuestionMarkSmallFill"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconFileSmallLine"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconStarSmallFill" color="gray400"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconMegaphoneSmallLine"></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconLinkSmallLine"></IconWrapper>
                         </div>
                     </div>
                     <!--medium-->
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Medium</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper name=IconCheckMediumFill></IconWrapper>
-                            <IconWrapper name=IconQuestionMediumLine></IconWrapper>
-                            <IconWrapper name=IconLikeMediumLine></IconWrapper>
-                            <IconWrapper name=IconLikeMediumFill></IconWrapper>
-                            <IconWrapper name=IconCommentMediumLine></IconWrapper>
-                            <IconWrapper name=IconCheckMediumLine></IconWrapper>
-                            <IconWrapper name=IconPlusMediumLine color="black"></IconWrapper>
-                            <IconWrapper name=IconArrowMediumLine></IconWrapper>
-                            <IconWrapper name=IconTextArrowMediumLine></IconWrapper>
-                            <IconWrapper name=IconFileMediumLineLight></IconWrapper>
-                            <IconWrapper name=IconTrashMediumLineLight></IconWrapper>
-                            <IconWrapper name=IconDownloadMediumLineLight></IconWrapper>
-                            <IconWrapper name=IconThreeDotMediumFill></IconWrapper>
-                            <IconWrapper name=IconHourglassMediumLine></IconWrapper>
-                            <IconWrapper name=IconCloseMediumFill></IconWrapper>
-                            <IconWrapper name=IconInfoMediumFill></IconWrapper>
-                            <IconWrapper name=IconInfoMediumLine></IconWrapper>
-                            <IconWrapper name=IconExclamationMediumLine></IconWrapper>
-                            <IconWrapper name=IconQuestionMarkMediumLine></IconWrapper>
-                            <IconWrapper name=IconCloseMediumLine></IconWrapper>
-                            <IconWrapper name=IconCheckRoundMediumLine></IconWrapper>
-                            <IconWrapper name=IconFilterMediumLine></IconWrapper>
-                            <IconWrapper name=IconLocationMediumFill></IconWrapper>
-                            <IconWrapper name=IconMentoringMediumLine></IconWrapper>
-                            <IconWrapper name=IconResumeMediumLine></IconWrapper>
-                            <IconWrapper name=IconJobWikiMediumLine></IconWrapper>
-                            <IconWrapper name=IconAnalyticsMediumLine></IconWrapper>
-                            <IconWrapper name=IconInterviewMediumLine></IconWrapper>
-                            <IconWrapper name=IconEssayMediumLine></IconWrapper>
-                            <IconWrapper name=IconVodMediumLine></IconWrapper>
-                            <IconWrapper name=IconEduMediumLine></IconWrapper>
-                            <IconWrapper name=IconCouponMediumLine></IconWrapper>
-                            <IconWrapper name=IconRevertMediumLine></IconWrapper>
-                            <IconWrapper name=IconDownloadMediumLine></IconWrapper>
-                            <IconWrapper name=IconExportMediumLine></IconWrapper>
-                            <IconWrapper name=IconClockMediumFill></IconWrapper>
-                            <IconWrapper name=IconClockMediumLine></IconWrapper>
-                            <IconWrapper name=IconSupportMediumLine></IconWrapper>
-                            <IconWrapper name=IconStarMediumFill color="gray400"></IconWrapper>
-                            <IconWrapper name=IconMegaphoneMediumLine></IconWrapper>
-                            <IconWrapper name=IconMinusMediumLine></IconWrapper>
-                            <IconWrapper name=IconDiscountMediumLine></IconWrapper>
-                            <IconWrapper name="IconLinkMediumLine"></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCheckMediumFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconQuestionMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconLikeMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconLikeMediumFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCommentMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCheckMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconPlusMediumLine color="black"></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconArrowMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconTextArrowMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconFileMediumLineLight></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconTrashMediumLineLight></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconDownloadMediumLineLight></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconThreeDotMediumFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconHourglassMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCloseMediumFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconInfoMediumFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconInfoMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconExclamationMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconQuestionMarkMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCloseMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCheckRoundMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconFilterMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconLocationMediumFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconMentoringMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconResumeMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconJobWikiMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconAnalyticsMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconInterviewMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconEssayMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconVodMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconEduMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCouponMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconRevertMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconDownloadMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconExportMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconClockMediumFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconClockMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconSupportMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconStarMediumFill color="gray400"></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconMegaphoneMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconMinusMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconDiscountMediumLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name="IconLinkMediumLine"></IconWrapper>
                         </div>
                     </div>
                     <!--large-->
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Large</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper name=IconProfileLargeFill></IconWrapper>
-                            <IconWrapper name=IconSelectedLargeLine></IconWrapper>
-                            <IconWrapper name=IconReplyLargeLine color="black"></IconWrapper>
-                            <IconWrapper name=IconSendLargeFill></IconWrapper>
-                            <IconWrapper name=IconPlusLargeLine color="black"></IconWrapper>
-                            <IconWrapper name=IconProfileLargeLine></IconWrapper>
-                            <IconWrapper name=IconAlarmLargeLine></IconWrapper>
-                            <IconWrapper name=IconSearchLargeLine></IconWrapper>
-                            <IconWrapper name=IconBackwardLargeLine></IconWrapper>
-                            <IconWrapper name=IconArrowLargeLine></IconWrapper>
-                            <IconWrapper name=IconTextArrowLargeLine></IconWrapper>
-                            <IconWrapper name=IconCloseLargeLine></IconWrapper>
-                            <IconWrapper name=IconExclamationLargeLine></IconWrapper>
-                            <IconWrapper name=IconFilterLargeLine></IconWrapper>
-                            <IconWrapper name=IconCheckLargeFill></IconWrapper>
-                            <IconWrapper name=IconSecurityLargeFill></IconWrapper>
-                            <IconWrapper name=IconDownloadLargeLine color="black"></IconWrapper>
-                            <IconWrapper name=IconCheckLargeLine></IconWrapper>
-                            <IconWrapper name=IconKeylineLargeLine></IconWrapper>
-                            <IconWrapper name=IconMentoringLargeLine></IconWrapper>
-                            <IconWrapper name=IconVodLargeLine></IconWrapper>
-                            <IconWrapper name=IconAnswerLargeLine></IconWrapper>
-                            <IconWrapper name=IconEduLargeLine></IconWrapper>
-                            <IconWrapper name=IconAnalyticsLargeLine></IconWrapper>
-                            <IconWrapper name=IconInterviewLargeLine></IconWrapper>
-                            <IconWrapper name=IconEssayLargeLine></IconWrapper>
-                            <IconWrapper name=IconResumeLargeLine></IconWrapper>
-                            <IconWrapper name=IconQuestionLargeLine></IconWrapper>
-                            <IconWrapper name=IconVideoLargeFill></IconWrapper>
-                            <IconWrapper name=IconStarLargeFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconProfileLargeFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconSelectedLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconReplyLargeLine color="black"></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconSendLargeFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconPlusLargeLine color="black"></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconProfileLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconAlarmLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconSearchLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconBackwardLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconArrowLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconTextArrowLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCloseLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconExclamationLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconFilterLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCheckLargeFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconSecurityLargeFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconDownloadLargeLine color="black"></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCheckLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconKeylineLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconMentoringLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconVodLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconAnswerLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconEduLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconAnalyticsLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconInterviewLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconEssayLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconResumeLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconQuestionLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconVideoLargeFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconStarLargeFill></IconWrapper>
                         </div>
                     </div>
                     <!--x-large-->
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper name=IconProfileXLargeFill></IconWrapper>
-                            <IconWrapper name=IconArrowXLargeLine></IconWrapper>
-                            <IconWrapper name=IconCloseXLargeLine></IconWrapper>
-                            <IconWrapper name=IconQuestionXLargeLine></IconWrapper>
-                            <IconWrapper name=IconAdoptXLargeLine></IconWrapper>
-                            <IconWrapper name=IconCreditPlusXLargeLine color="black"></IconWrapper>
-                            <IconWrapper name=IconCreditMinusXLargeLine></IconWrapper>
-                            <IconWrapper name=IconLikeXLargeLine></IconWrapper>
-                            <IconWrapper name=IconCelebrateXLargeLine></IconWrapper>
-                            <IconWrapper name=IconAnswerXLargeLine></IconWrapper>
-                            <IconWrapper name=IconMegaphoneXLargeLine></IconWrapper>
-                            <IconWrapper name=IconCheckXLargeFill></IconWrapper>
-                            <IconWrapper name=IconUnCheckedXLargeFill></IconWrapper>
-                            <IconWrapper name=IconStarXLargeFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconProfileXLargeFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconArrowXLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCloseXLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconQuestionXLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconAdoptXLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCreditPlusXLargeLine color="black"></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCreditMinusXLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconLikeXLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCelebrateXLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconAnswerXLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconMegaphoneXLargeLine></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconCheckXLargeFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconUnCheckedXLargeFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconStarXLargeFill></IconWrapper>
                         </div>
                     </div>
                     <!--2x-large-->
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">2XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper name=IconProfile2XLargeFill></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconProfile2XLargeFill></IconWrapper>
                         </div>
                     </div>
                     <!--4x-large-->
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">4XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper name=IconStar4XLargeFill color="gray400"></IconWrapper>
+                            <IconWrapper component-name="Icon" name=IconStar4XLargeFill color="gray400"></IconWrapper>
                         </div>
                     </div>
                 </div>
